syntax = "proto3";


  option java_multiple_files = true;
  option java_package = "product";
  option java_outer_classname = "ProductServiceImpl";


package product;

    service ProductService {

        rpc productItems(stream productsItem) returns ( stream productsResponse) {}
     
  
    }


    
    message productsItem{
    
    string products = 1;
   
    
    }
    
    message productsResponse{
    
	string products = 1;
	 	
	}
    
 
    message Empty{

    }